samples/learningOverview/invalid/R4.dita
<?xml version="1.0" encoding="UTF-8"?>
<learningOverview id="lo1" xml:lang="en">
  <title>Main Learning Overview Title</title>
  <prolog/>
  <!-- <learningOverviewbody> ... </learningOverviewbody> -->
</learningOverview>